--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,7 @@
 
 :root {
 
-    --clr-background-1:#5C258D;
+    --clr-background-1:#b761da;
     --clr-background-2:#4389A2;
 
     /* dark shades of primary color*/
@@ -159,4 +159,43 @@ header {
 
 h1 {
     text-transform: capitalize;
+    color: var(--clr-grey-10);
+}
+
+/*  index.html */
+
+.main {
+    background: var(--clr-background-1);  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right,  var(--clr-background-1),  var(--clr-background-2));  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right,  var(--clr-background-1),  var(--clr-background-2)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-color: aliceblue;
+    display: flex;
+    flex-direction: column;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn {
+    text-decoration: none;
+    background-color: var(--clr-primary-10);
+    padding: 24px;
+    border-radius: 24px;
+    margin-bottom: 10px;
+    text-transform: capitalize;
+    border: none;
+}
+
+.main-another {
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+}
+
+.horca {
+    width: 300px;
 }
