--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -180,11 +180,16 @@ h1 {
 .btn {
     text-decoration: none;
     background-color: var(--clr-primary-10);
-    padding: 24px;
-    border-radius: 24px;
+    padding: 15px;
+    border-radius: 20px;
     margin-bottom: 10px;
     text-transform: capitalize;
     border: none;
+    color: var(--clr-primary-3);
+}
+
+.btn:hover {
+    cursor: pointer;
 }
 
 .main-another {
@@ -228,5 +233,8 @@ span{
 
 .wrong-letter span {
     color: wheat;
+}
 
+a {
+    text-decoration: none;
 }
